--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -10,4 +10,9 @@
   font-family: "Work Sans",sans-serif;
 } */
 
-
+*,
+*::before,
+*::after {
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
